# cc_cut_tool

./: README.md  pyproject.toml
cccut/: __init__.py  main.py
tests/: test_cccut.py
