[build-system]
requires = ["setuptools>42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cccut"
version = "0.1.0"
description = "A cut-like tool to print selected parts of lines from each FILE to standard output."
readme = "README.md"
license = {text="MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"} # Enter your email id
]
dependencies = [
    "typer[all]>=0.4.0"
]

[project.scripts]
cccut = "cccut.main:app"
